feat(hotel): adds update endpoint in Swagger documentation
